feat(index.js): 连接上数据库就出错

--- a/config/default.conf
+++ b/config/default.conf
@@ -5,14 +5,15 @@ upstream nodeproxy {
 }
 
 server {
-    listen       80;
+    listen       80; # 0.0.0.0:80
     listen  [::]:80;
     server_name  localhost;
 
     #access_log  /var/log/nginx/host.access.log  main;
-
+    
     location / {
-        proxy_pass http://nodeproxy;
+        # proxy_pass 后续可以使用一个 url (代理) 或者 upstream (负载均衡) 
+        proxy_pass   http://nodeproxy;
     }
 
     #error_page  404              /404.html;
