--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8088:80"
     volumes:
       - ./config/default.conf:/etc/nginx/conf.d/default.conf
+      - ./config/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - node
   node:
@@ -26,8 +27,8 @@ services:
     ports:
       - 9099:3306
     environment:
-      - MYSQL_ROOT_PASSWORD:docker
-      - MYSQL_DATABASE:docker
-      # - MYSQL_USER:docker
-      # - MYSQL_PASSWORD:docker
+      MYSQL_ROOT_PASSWORD: my-secret-pw
+      MYSQL_DATABASE: docker
+      # - MYSQL_USER: root
+      # - MYSQL_PASSWORD: docker
     
