--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,39 @@
 version: '3'
 
 services:
-  nginx:
-    image: nginx
-    container_name: web-nginx-container
+  # nginx:
+  #   image: nginx
+  #   container_name: web-nginx-container
+  #   ports:
+  #     - "8088:80"
+  #   volumes:
+  #     - ./config/default.conf:/etc/nginx/conf.d/default.conf
+  #     - ./config/nginx.conf:/etc/nginx/nginx.conf
+  #   depends_on:
+  #     - node
+  mysql:
+    image: mysql:8.0
+    container_name: web-mysql-container
+    restart: always
     ports:
-      - "8088:80"
-    volumes:
-      - ./config/default.conf:/etc/nginx/conf.d/default.conf
-      - ./config/nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - node
+      - "8089:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: my-secret-pw
+      MYSQL_DATABASE: docker
+      MYSQL_USER: tomcat
+      MYSQL_PASSWORD: my-secret-pw
+    command: --default-authentication-plugin=mysql_native_password
   node:
     image: node:alpine
     container_name: web-node-container
     working_dir: /app
     volumes:
       - ".:/app"
-    command: npm run start
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+      - "9002:9002"
     depends_on:
       - mysql
-  mysql:
-    image: mysql:8.0
-    container_name: web-mysql-container
-    restart: always
-    ports:
-      - 9099:3306
-    environment:
-      MYSQL_ROOT_PASSWORD: my-secret-pw
-      MYSQL_DATABASE: docker
-      # - MYSQL_USER: root
-      # - MYSQL_PASSWORD: docker
+    command: npm run start
     
