--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./index.js",
+    "start": "nodemon --exec babel-node ./app.js",
     "commit": "git add . && git-cz",
     "publish": "git pull && npm version patch && git push"
   },
